--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -4,19 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent" android:layout_height="match_parent"
-        tools:context=".root.RootActivity">
-
-    <fragment
-            android:id="@+id/nav_host_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_graph"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/playerFragment"
-
-    />
+        tools:context=".notification.NotificationActivity">
 
     <fragment android:id="@+id/playerFragment"
               android:name="esgi.com.deezerApp.root.player.PlayerFragment"
@@ -25,8 +13,7 @@
               android:layout_width="match_parent"
               android:layout_height="70dp"
               app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment"
-                app:layout_constraintBottom_toBottomOf="parent">
-
+              app:layout_constraintTop_toTopOf="parent">
     </fragment>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
