--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -1,17 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   android:orientation="horizontal"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="75dp">
+
+    <ImageView
+            android:id="@+id/item_album_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="12.5dp"
+            android:background="#e1e1e1"
+    />
 
     <TextView
             android:id="@+id/item_album_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="16sp"
-            android:gravity="center_vertical"
-            tools:text="@tools:sample/lorem">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            tools:text="@tools:sample/lorem"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/item_album_artist_name"
+            app:layout_constraintLeft_toRightOf="@+id/item_album_image"
+            android:layout_marginLeft="20dp"
+            tools:src="@tools:sample/avatars"
+            android:textStyle="bold"
+    >
     </TextView>
 
-</LinearLayout>
+    <TextView
+            android:id="@+id/item_album_artist_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            tools:text="@tools:sample/lorem"
+            app:layout_constraintTop_toBottomOf="@id/item_album_title"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/item_album_image"
+            android:layout_marginLeft="20dp"
+    >
+    </TextView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
