--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       xmlns:app="http://schemas.android.com/apk/res-auto"
+       android:orientation="horizontal"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
 
     <TextView
             android:id="@+id/item_track_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
             android:gravity="center_vertical"
-            tools:text="@tools:sample/lorem">
+            android:textStyle="bold"
+            tools:text="@tools:sample/lorem"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginLeft="10dp">
     </TextView>
 
-</LinearLayout>
+    <TextView
+            android:id="@+id/item_track_artist_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:gravity="center_vertical"
+            tools:text="@tools:sample/lorem"
+            app:layout_constraintTop_toBottomOf="@+id/item_track_title"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="10dp">
+    </TextView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
