--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,18 +6,23 @@
     <fragment android:id="@+id/albumsFragment"
               android:name="esgi.com.deezerApp.root.albums.AlbumsFragment"
               android:label="AlbumsFragment"
-              tools:layout="@layout/activity_albums">
-        <action android:id="@+id/action_albumsFragment_to_tracklistFragment" app:destination="@id/tracklistFragment"
-                app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"
-                app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"
-        />
+              tools:layout="@layout/fragment_albums">
+        <action android:id="@+id/action_albumsFragment_to_tracklistFragment"
+                app:destination="@id/tracklistFragment"
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
 
     <fragment android:id="@+id/tracklistFragment"
               android:name="esgi.com.deezerApp.root.tracklist.TracklistFragment"
               android:label="TracklistFragment"
-              tools:layout="@layout/activity_tracklist">
+              tools:layout="@layout/fragment_tracklist">
         <argument android:name="albumId" app:argType="string"/>
+        <argument android:name="albumTitle" app:argType="string"/>
+        <argument android:name="albumArtistName" app:argType="string"/>
+        <argument android:name="albumCover" app:argType="string"/>
     </fragment>
 
 </navigation>
